# esthri

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Jenkinsfile  LICENSE  Makefile.toml  README.md  clippy.toml  release.toml
.cargo/: config  config.toml
.dependabot/: config.yml
.github/: dependabot.yml  main.yml
.github/workflow/: publish.yml
.github/workflows/: ci.yml  main.yml  publish.yml
crates/esthri/: .gitignore  Cargo.toml
crates/esthri-cli/: Cargo.toml
crates/esthri-cli/src/: cli_opts.rs  cli_utils.rs  http_axum.rs  http_server.rs  main.rs
crates/esthri-cli/tests/integration/: cli_test.rs  http_server.rs  main.rs
crates/esthri-internals/: Cargo.toml
crates/esthri-internals/src/: lib.rs  rusoto.rs
crates/esthri-test/: .gitignore  Cargo.toml
crates/esthri-test/data/: .gitattributes  index.html  test_file.txt
crates/esthri-test/data/index_html/: index.html
crates/esthri-test/data/index_html/subdir/: a_file.txt
crates/esthri-test/data/index_html/subdir/has_index/: index.html
crates/esthri-test/data/sync_up/: 3-three.junk
crates/esthri-test/data/temporary_data/: A.txt
crates/esthri-test/scripts/: benchmark.sh  create_test_files.sh  run_remote_benchmark.sh
crates/esthri-test/src/: lib.rs
crates/esthri/src/: aws_sdk.rs  blocking.rs  bufferpool.rs  compression.rs  config.rs  errors.rs  lib.rs  redis.rs  retry.rs  rusoto.rs  tempfile.rs  types.rs
crates/esthri/src/ops/: copy.rs  delete.rs  download.rs  mod.rs  presign.rs  sync.rs  upload.rs
crates/esthri/src/presign/: delete.rs  download.rs  mod.rs  multipart_upload.rs  upload.rs
crates/esthri/tests/data/sync_down/d/: 1-one.data
crates/esthri/tests/integration/: delete_test.rs  download_test.rs  list_object_test.rs  main.rs  presign.rs  send_sync.rs  send_test.rs  sync_test.rs  upload_test.rs
investigation/: GraphMemAndBandwidth.ipynb
scripts/: package-version.py
src/: blocking.rs  errors.rs  http_server.rs  lib.rs  main.rs  retry.rs  s3serve.rs  types.rs
src/esthri/: Cargo.toml
src/esthri/src/: blocking.rs  compression.rs  config.rs  errors.rs  http_server.rs  lib.rs  main.rs  retry.rs  rusoto.rs  types.rs
src/esthri/src/ops/: copy.rs  download.rs  mod.rs  sync.rs  upload.rs
src/esthri/src/rusoto/: mod.rs  nativetls.rs  rustls.rs
src/esthri/tests/data/: 27-185232-msg.csv  index.html
src/esthri/tests/integration/: cli_test.rs  download_test.rs  http_server.rs  list_object_test.rs  main.rs  sync_test.rs  tail_test.rs  upload_test.rs
src/esthri/tests/scripts/: populate_stream_obj_test_data.bash
src/esthri_rusoto/rusoto_nativetls/: Cargo.toml
src/esthri_rusoto/rusoto_nativetls/src/: lib.rs
src/esthri_rusoto/rusoto_rustls/: Cargo.toml
src/esthri_rusoto/rusoto_rustls/src/: lib.rs
tests/: download_test.rs  http_server.rs  list_object_test.rs  sync_test.rs  tail_test.rs  upload_test.rs
tests/common/: mod.rs
tests/data/sync_up/: 1-one.data
tests/integration/: download_test.rs  http_server.rs  list_object_test.rs  main.rs  sync_test.rs  tail_test.rs  upload_test.rs
