[[bin]]
name = "esthri"
path = "src/main.rs"

[package]
name = "esthri"
version = "4.0.0"
authors = [ "Jason Mobarak <jason@swift-nav.com>",]
edition = "2018"

[dependencies]
rusoto_core = ">= 0.43, < 1"
rusoto_s3 = ">= 0.43, < 1"
rusoto_credential = ">= 0.43, < 1"
once_cell = "1.4"
rust-crypto = "0.2"
hex = "0.4"
structopt = "0.3"
clap = "2.33"
walkdir = "2"
glob = "0.3"
thiserror = "1.0"
log = "0.4"
env_logger = "0.7"
hyper = "0.13.8"
hyper-tls = "0.4.3"
log-derive = "0.4.1"
futures = "0.3.6"
eyre = "0.6.1"
stable-eyre = "0.2.1"
chrono = "0.4"

[dev-dependencies]
md5 = "0.7"
tar = "0.4"
flate2 = "1.0"
tempdir = "0.3"
backtrace = "0.3"

[lib]
name = "esthri_lib"
path = "src/lib.rs"

[features]
default = [ "http_server",]
aggressive_lint = []
http_server = [ "async-tar", "async-compression", "async-stream", "bytes", "futures-util", "mime_guess", "sluice", "sanitize-filename", "serde", "serde_derive", "tokio-util", "warp",]

[dependencies.tokio]
version = "0.2"
features = [ "io-std",]

[dependencies.backoff]
version = "0.2.1"
features = [ "tokio",]

[dependencies.warp]
version = "0.2"
optional = true

[dependencies.futures-util]
version = "0.3"
optional = true

[dependencies.async-tar]
version = "0.3"
optional = true

[dependencies.async-compression]
version = "0.3"
features = [ "gzip", "futures-io",]
optional = true

[dependencies.async-stream]
version = "0.3"
optional = true

[dependencies.sluice]
version = "0.5"
optional = true

[dependencies.bytes]
version = "0.5"
optional = true

[dependencies.tokio-util]
version = "0.3.1"
features = [ "compat", "codec",]
optional = true

[dependencies.serde]
version = "1.0"
optional = true

[dependencies.serde_derive]
version = "1.0"
optional = true

[dependencies.mime_guess]
version = "2.0"
optional = true

[dependencies.sanitize-filename]
version = "0.3"
optional = true

[dependencies.ctrlc]
version = "3.1"
features = [ "termination",]
