[workspace]
members = ["crates/esthri", "crates/esthri-internals", "crates/esthri-cli", "crates/esthri-test"]

[workspace.dependencies]
aws-sdk-s3 = "0.30"
aws-smithy-http = "0.56"
aws-types = "0.56"
aws-config = "0.56"



[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1
