[package]
name = "esthri-cli"
description = "Extremely simple (memory stable) S3 client that supports get, put, head, list, and sync."
version = "7.0.0"
authors = ["Swift Navigation <dev@swift-nav.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/swift-nav/esthri/"
homepage = "https://github.com/swift-nav/esthri/"
readme = "../../README.md"
categories = ["command-line-utilities"]
keywords = ["aws", "s3"]

[features]
default = []
server = []

[[bin]]
name = "esthri"
path = "src/main.rs"

[lib]
name = "esthri_server"
path = "src/http_server.rs"

[dependencies]
esthri = { path = "../esthri", features = [] }
async-stream = "0.3"
env_logger = "0.9"
futures = "0.3"
futures-util = "0.3"
glob = "0.3"
hyper = "0.14"
log = "0.4"
log-derive = "0.4"
once_cell = "1.7"
serde = "1"
structopt = "0.3"
warp = "0.3"

[dependencies.async-compression]
version = "0.3"
features = ["gzip", "tokio"]

[dependencies.anyhow]
version = "1"
features = ["backtrace"]

[dependencies.tokio]
version = "1.6"
features = ["rt", "fs", "io-util", "signal"]

[dependencies.async-tar]
version = "0.4.2"

[dependencies.sluice]
version = "0.5"

[dependencies.bytes]
version = "1.0"

[dependencies.tokio-util]
version = "0.6.9"
features = ["compat", "codec", "io", "io-util"]

[dependencies.mime_guess]
version = "2.0"

[dependencies.sanitize-filename]
version = "0.3"

[dependencies.maud]
version = "0.22"

[dev-dependencies]
esthri-test = { path = "../esthri-test" }
assert_cmd = "2.0.4"
backtrace = "0.3"
flate2 = "1.0.22"
fs_extra = "1.2"
md5 = "0.7"
tar = "0.4"
tempdir = "0.3"
