[package]
name = "esthri-cli"
description = "Extremely simple (memory stable) S3 client that supports get, put, head, list, and sync."
version = "10.0.0"
authors = ["Swift Navigation <dev@swift-nav.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/swift-nav/esthri/"
homepage = "https://github.com/swift-nav/esthri/"
readme = "../../README.md"
categories = ["command-line-utilities"]
keywords = ["aws", "s3"]

[features]
default = ["rustls"]
nativetls = ["esthri/nativetls"]
rustls = ["esthri/rustls"]
aggressive_lint = []
blocking = []

[[bin]]
name = "esthri"
path = "src/main.rs"

# library used for integration tests
[lib]
name = "esthri_server"
path = "src/http_server.rs"

[dependencies]
esthri = { version = "10.0.1", path = "../esthri", default-features = false }
anyhow = { version = "1", features = ["backtrace"] }
async-compression = { version = "0.3", features = ["gzip", "tokio"] }
async_zip = "0.0.7"
async-stream = "0.3"
bytes = "1.0"
derive_builder = "0.12.0"
env_logger = "0.10"
futures = { version = "0.3", default-features = false }
glob = "0.3"
hyper = "0.14"
log = "0.4"
log-derive = "0.4"
maud = "0.22"
mime_guess = "2.0"
once_cell = "1.7"
sanitize-filename = "0.4"
serde = "1"
clap = { version = "4.0.26", features = ["derive", "env"] }
tokio = { version = "1.23.0", features = ["rt-multi-thread", "signal", "sync"] }
tokio-util = { version = "0.7.4", features = ["compat", "codec"] }
warp = "0.3"

[dev-dependencies]
esthri = { path = "../esthri", default-features = false, features=["blocking"] }
esthri-test = { path = "../esthri-test" }
assert_cmd = "2.0.5"
backtrace = "0.3"
fs_extra = "1.2"
md5 = "0.7"
tempdir = "0.3"
zip = "0.6.2"
