[package]
name = "esthri-internals"
description = "Internals common to esthri crates"
version = "9.1.0"
authors = ["Swift Navigation <dev@swift-nav.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/swift-nav/esthri/"
homepage = "https://github.com/swift-nav/esthri/"
readme = "../../README.md"
keywords = ["aws", "s3"]
rust-version = "1.56.1"

[features]
default = []
nativetls = ["rusoto_core/native-tls", "rusoto_s3/native-tls", "hyper-tls"]
rustls = ["rusoto_core/rustls", "rusoto_s3/rustls", "hyper-rustls"]
aggressive_lint = []

[dependencies]
hyper = "0.14"
rusoto_core = { version = ">= 0.46, < 1", default-features = false }
rusoto_credential = { version = ">= 0.46, < 1", default-features = false }
rusoto_s3 = { version = ">= 0.46, < 1", default-features = false }
rusoto_signature = { version = ">= 0.46, < 1", default-features = false }
rusoto_sts = { version = ">= 0.46, < 1", default-features = false }

[dependencies.hyper-tls]
version = "0.5"
optional = true

[dependencies.hyper-rustls]
version = "0.23"
optional = true
features = ["webpki-roots"]
