[package]
name = "esthri-internals"
description = "Internals common to esthri crates"
version = "12.0.0"
authors = ["Swift Navigation <dev@swift-nav.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/swift-nav/esthri/"
homepage = "https://github.com/swift-nav/esthri/"
readme = "../../README.md"
keywords = ["aws", "s3"]
rust-version = "1.74.0"

[features]
default = []
nativetls = ["hyper-tls"]
rustls = ["hyper-rustls"]
aggressive_lint = []
blocking = []

[dependencies]
hyper = { workspace = true }
[dependencies.hyper-tls]
version = "0.5"
optional = true

[dependencies.hyper-rustls]
version = "=0.23"
optional = true
features = ["webpki-roots"]
