[package]
name = "esthri-test"
description = "Tests for esthri"
version = "12.0.0"
authors = ["Swift Navigation <dev@swift-nav.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/swift-nav/esthri/"
homepage = "https://github.com/swift-nav/esthri/"
readme = "../../README.md"

[features]
default = []
nativetls = ["esthri-internals/nativetls"]
rustls = ["esthri-internals/rustls"]
blocking = []

[dependencies]
esthri-internals = { path = "../esthri-internals", version = "12.0.0", default-features = false }
chrono = "0.4"
env_logger = "0.10"
flate2 = "1.0.28"
hyper = { workspace = true }
md-5 = "0.10.6"
once_cell = "1.18"
tempdir = "0.3"
uuid = { version="1.7.0", features=["v4"] }
fs_extra = "1.3.0"
tokio = "1.34.0"
futures = "0.3"

aws-sdk-s3 = { workspace = true }
aws-types = { workspace = true }
aws-config = { workspace = true }
aws-smithy-runtime = { workspace = true }


