[package]
name = "esthri"
description = "Extremely simple (memory stable) S3 client that supports get, put, head, list, and sync."
version = "8.7.0"
authors = ["Swift Navigation <dev@swift-nav.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/swift-nav/esthri/"
homepage = "https://github.com/swift-nav/esthri/"
readme = "../../README.md"
keywords = ["aws", "s3"]
rust-version = "1.56.1"

[features]
default = ["blocking", "rustls"]
aggressive_lint = []
blocking = ["tokio/rt"]
nativetls = ["esthri-internals/nativetls"]
rustls = ["esthri-internals/rustls"]

[dependencies]
async-compression = { version = "0.3", features = ["gzip", "tokio"] }
async-stream = "0.3"
bytes = "1"
chrono = "0.4"
derive_builder = "0.11.2"
envy = "0.4"
futures = { version = "0.3", default-features = false }
glob = "0.3"
hex = "0.4"
log = "0.4"
log-derive = "0.4"
md-5 = "0.10.5"
once_cell = "1"
parking_lot = "0.12"
regex = "1"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["fs", "io-util", "sync", "parking_lot"] }
tokio-retry = "0.3"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
walkdir = "2"
strum = "0.24.1"
strum_macros = "0.24.3"
reqwest = { version="0.11.12", features=["stream", "json"] }
serde-tuple-vec-map = "1.0.1"

[dependencies.esthri-internals]
path = "../esthri-internals"

[dev-dependencies]
esthri-test = { path = "../esthri-test" }
tar = "0.4"
tempdir = "0.3"
backtrace = "0.3"
fs_extra = "1.2"
assert_cmd = "2.0.5"
