[package]
name = "esthri"
description = "Extremely simple (memory stable) S3 client that supports get, put, head, list, and sync."
version = "12.0.0"
authors = ["Swift Navigation <dev@swift-nav.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/swift-nav/esthri/"
homepage = "https://github.com/swift-nav/esthri/"
readme = "../../README.md"
keywords = ["aws", "s3"]
rust-version = "1.74.0"

[features]
default = ["blocking", "rustls"]
aggressive_lint = []
blocking = ["tokio/rt", "tokio/macros", "tokio/rt-multi-thread"]
nativetls = ["esthri-internals/nativetls", "reqwest/native-tls"]
rustls = ["esthri-internals/rustls", "reqwest/rustls-tls"]

[dependencies]
async-compression = { version = "0.4", features = ["gzip", "tokio"] }
async-stream = "0.3"
bytes = "1"
chrono = "0.4"
derive_builder = "0.20.0"
envy = "0.4"
futures = { version = "0.3", features = ["std"], default-features = false }
glob = "0.3"
hex = "0.4"
log = "0.4"
log-derive = "0.4"
md-5 = "0.10.6"
once_cell = "1"
parking_lot = "0.12"
regex = "1"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
thiserror = "1"
tokio = { version = "1.36.0", features = ["fs", "io-util", "sync", "parking_lot", "rt", "macros"] }
tokio-retry = "0.3"
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.10", features = ["io"] }
walkdir = "2"
strum = "0.26.2"
strum_macros = "0.26.2"
reqwest = { version="0.12.2", features=["stream", "json"], default-features = false }
serde-tuple-vec-map = "1.0.1"

aws-sdk-s3 = { workspace = true }
aws-types = { workspace = true }
aws-config = { workspace = true }
aws-smithy-runtime = { workspace = true }

[dependencies.esthri-internals]
version = "12.0.0"
path = "../esthri-internals"

[dev-dependencies]
esthri-test = { path = "../esthri-test" }
tar = "0.4"
tempdir = "0.3"
backtrace = "0.3"
fs_extra = "1.3"
assert_cmd = "2.0.14"
