[[bin]]
name = "esthri"
path = "src/main.rs"
required-features = [ "cli",]

[package]
name = "esthri"
version = "5.0.0"
authors = [ "Swift Navigation <dev@swift-nav.com>",]
edition = "2018"

[dependencies]
once_cell = "1.5"
rust-crypto = "0.2"
hex = "0.4"
walkdir = "2"
glob = "0.3"
log = "0.4"
env_logger = "0.8"
log-derive = "0.4.1"
hyper = "0.13.9"
futures = "0.3.8"
thiserror = "1.0"
eyre = "0.6.4"
stable-eyre = "0.2.1"
chrono = "0.4"
regex = "1"

[dev-dependencies]
md5 = "0.7"
tar = "0.4"
flate2 = "1.0"
tempdir = "0.3"
backtrace = "0.3"

[lib]
name = "esthri"
path = "src/lib.rs"

[features]
default = []
aggressive_lint = []
http_server = [ "async-tar", "async-compression", "async-stream", "bytes", "futures-util", "mime_guess", "sluice", "sanitize-filename", "serde", "serde_derive", "tokio-util", "warp", "ctrlc",]
nativetls = [ "rusoto_nativetls",]
rustls = [ "rusoto_rustls",]
cli = [ "ctrlc", "structopt",]

[dependencies.structopt]
version = "0.3"
optional = true

[dependencies.rusoto_nativetls]
path = "../esthri_rusoto/rusoto_nativetls"
optional = true
features = [ "nativetls",]

[dependencies.rusoto_rustls]
path = "../esthri_rusoto/rusoto_rustls"
optional = true
features = [ "rustls",]

[dependencies.tokio]
version = "0.2"
features = [ "io-std",]

[dependencies.backoff]
version = "0.2.1"
features = [ "tokio",]

[dependencies.warp]
version = "0.2"
optional = true

[dependencies.futures-util]
version = "0.3"
optional = true

[dependencies.async-tar]
version = "0.3"
optional = true

[dependencies.async-compression]
version = "0.3"
features = [ "gzip", "futures-io",]
optional = true

[dependencies.async-stream]
version = "0.3"
optional = true

[dependencies.sluice]
version = "0.5"
optional = true

[dependencies.bytes]
version = "0.5"
optional = true

[dependencies.tokio-util]
version = "0.6.1"
features = [ "compat", "codec",]
optional = true

[dependencies.serde]
version = "1.0"
optional = true

[dependencies.serde_derive]
version = "1.0"
optional = true

[dependencies.mime_guess]
version = "2.0"
optional = true

[dependencies.sanitize-filename]
version = "0.3"
optional = true

[dependencies.ctrlc]
version = "3.1"
features = [ "termination",]
optional = true
