[[bin]]
name = "esthri"
path = "src/main.rs"
required-features = [ "cli",]

[package]
name = "esthri"
version = "5.1.2"
authors = [ "Swift Navigation <dev@swift-nav.com>",]
edition = "2018"

[dependencies]
once_cell = "1.7"
rust-crypto = "0.2"
hex = "0.4"
walkdir = "2"
glob = "0.3"
log = "0.4"
env_logger = "0.8"
log-derive = "0.4"
hyper = "0.14"
futures = "0.3"
thiserror = "1.0"
chrono = "0.4"
regex = "1"

[dev-dependencies]
md5 = "0.7"
tar = "0.4"
flate2 = "1.0"
tempdir = "0.3"
backtrace = "0.3"
tokio-test = "0.4"

[lib]
name = "esthri"
path = "src/lib.rs"

[features]
default = [ "rustls", "cli", "http_server", "blocking", ]
aggressive_lint = []
blocking = []
http_server = [ "async-tar", "async-compression", "async-stream", "bytes", "futures-util", "mime_guess", "sluice", "sanitize-filename", "serde", "serde_derive", "tokio-util", "warp", "ctrlc", "anyhow"]
nativetls = [ "rusoto_credential", "rusoto_core/native-tls", "rusoto_signature", "rusoto_s3/native-tls", "hyper-tls",]
rustls = [ "rusoto_credential", "rusoto_core/rustls", "rusoto_signature", "rusoto_s3/rustls", "hyper-rustls",]
cli = [ "ctrlc", "structopt", "blocking" ]

[dependencies.anyhow]
version = "1"
features = ["backtrace"]
optional = true

[dependencies.rusoto_credential]
version = ">= 0.46, < 1"
optional = true
default-features = false

[dependencies.rusoto_core]
version = ">= 0.46, < 1"
optional = true
default-features = false

[dependencies.rusoto_signature]
version = ">= 0.46, < 1"
optional = true
default-features = false

[dependencies.rusoto_s3]
version = ">= 0.46, < 1"
optional = true
default-features = false

[dependencies.hyper-tls]
version = "0.5"
optional = true

[dependencies.hyper-rustls]
version = "0.22"
features = [ "webpki-roots",]
optional = true

[dependencies.structopt]
version = "0.3"
optional = true

[dependencies.tokio]
version = "1.5"
features = [ "io-std", "net", "rt", "time",]

[dependencies.backoff]
version = "0.3"
features = [ "tokio",]

[dependencies.warp]
version = "0.3"
optional = true

[dependencies.futures-util]
version = "0.3"
optional = true

[dependencies.async-tar]
version = "0.3"
optional = true

[dependencies.async-compression]
version = "0.3"
features = [ "gzip", "futures-io",]
optional = true

[dependencies.async-stream]
version = "0.3"
optional = true

[dependencies.sluice]
version = "0.5"
optional = true

[dependencies.bytes]
version = "1.0"
optional = true

[dependencies.tokio-util]
version = "0.6"
features = [ "compat", "codec",]
optional = true

[dependencies.serde]
version = "1.0"
optional = true

[dependencies.serde_derive]
version = "1.0"
optional = true

[dependencies.mime_guess]
version = "2.0"
optional = true

[dependencies.sanitize-filename]
version = "0.3"
optional = true

[dependencies.ctrlc]
version = "3.1"
features = [ "termination",]
optional = true
