[package]
name = "rusoto_nativetls"
version = "5.1.2"
authors = [ "Swift Navigation <dev@swift-nav.com>",]
edition = "2018"

[features]
default = []
nativetls = [ "rusoto_credential", "rusoto_core", "rusoto_signature", "rusoto_s3", "hyper-tls",]

[dependencies.rusoto_credential]
version = ">= 0.46, < 1"
optional = true

[dependencies.rusoto_core]
version = ">= 0.46, < 1"
optional = true

[dependencies.rusoto_signature]
version = ">= 0.46, < 1"
optional = true

[dependencies.rusoto_s3]
version = ">= 0.46, < 1"
optional = true

[dependencies.hyper-tls]
version = "0.5"
optional = true
