[package]
name = "rusoto_rustls"
version = "0.1.0"
authors = [ "Swift Navigation <dev@swift-nav.com>",]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_credential = { version = ">= 0.43, < 1", optional = true }
rusoto_signature = { version = ">= 0.43, < 1", optional = true }
rusoto_core = { version = ">= 0.43, < 1", features = ["rustls"], default_features = false, optional = true }
rusoto_s3 = { version = ">= 0.43, < 1", features = ["rustls"], default_features = false, optional = true }
hyper-rustls = { version = "0.21.0", optional = true }

[features]
default = []
rustls = ["rusoto_credential", "rusoto_core", "rusoto_signature", "rusoto_s3", "hyper-rustls"]
