[package]
name = "rusoto_rustls"
version = "5.1.2"
authors = [ "Swift Navigation <dev@swift-nav.com>",]
edition = "2018"

[features]
default = []
rustls = [ "rusoto_credential", "rusoto_core", "rusoto_signature", "rusoto_s3", "hyper-rustls",]

[dependencies.rusoto_credential]
version = ">= 0.46, < 1"
optional = true

[dependencies.rusoto_signature]
version = ">= 0.46, < 1"
optional = true

[dependencies.rusoto_core]
version = ">= 0.46, < 1"
features = [ "rustls",]
default_features = false
optional = true

[dependencies.rusoto_s3]
version = ">= 0.46, < 1"
features = [ "rustls",]
default_features = false
optional = true

[dependencies.hyper-rustls]
version = "0.22"
features = [ "webpki-roots",]
optional = true
